--- a/app/templates/backpack_detail.html
+++ b/app/templates/backpack_detail.html
@@ -1,23 +1,45 @@
 {% extends "base.html" %}
 
+{% block title %}
+  <title>O que levar – Sua mochila</title>
+{% endblock %}
+
 {% block content %}
-<h1>Come closer, take a look in my backpack</h1>
 
-<p>Temp: {{ context.backpack.temp }}</p>
-<p>Days: {{ context.backpack.days }}</p>
-<p>Sex: {{ context.backpack.sex }}</p>
-<p>Created at: {{ context.backpack.created_at }}</p>
+<div class="row justify-content-center mt-5">
+    <div class="col-6 jumbotron">
 
-</hr>
+        <a href="{% url 'backpack-new' %}">← Voltar</a>
+        <h1 class="display-3">O que levar</h1>
+
+        <hr>
+
+        <ul>
+            <li>Temperatura: {{ context.backpack.temp }}</li>
+            <li>Dias: {{ context.backpack.days }}</li>
+            <li>Sexo: {{ context.backpack.sex }}</li>
+        </ul>
+
+    </div>
+</div>
+
+<div class="row justify-content-center">
+    <div class="col-6">
+        <h2>Sua mochila</h2>
+        <ul>
+            {% for item in context.items %}
+                <li>{{ item }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 
 
-<p>Backpack Items:</p>
-<ul>
-{% for item in context.items %}
-<li>{{ item }}</li>
-{% endfor %}
-</ul>
 
 
-<a href="{% url 'backpack-new' %}">Go to home.</a>
+
+
+
+
+
 {% endblock %}
