--- a/app/templates/backpack_new.html
+++ b/app/templates/backpack_new.html
@@ -1,12 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Hellow world</h1>
 
-<form method="POST" class="post-form">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Save</button>
-</form>
+
+<div class="row justify-content-center mt-5">
+    <div class="col-6 jumbotron">
+
+        <h1 class="display-3">O que levar</h1>
+        <p class="lead">Feito para mochileiros que querem viajar de forma mais leve e inteligente</p>
+
+        <hr>
+
+        <form method="POST" class="post-form">
+            {% csrf_token %}
+            {{ form.as_table }}
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Fazer a minha mala</button>
+        </form>
+
+    </div>
+</div>
 
 {% endblock %}
