--- a/app/templates/backpack_new.html
+++ b/app/templates/backpack_new.html
@@ -3,18 +3,39 @@
 {% block content %}
 
 
-<div class="row justify-content-center mt-5">
-    <div class="col-6 jumbotron">
+<div class="row justify-content-center">
+    <div class="col-6">
 
-        <h1 class="display-3">O que levar</h1>
-        <p class="lead">Feito para mochileiros que querem viajar de forma mais leve e inteligente</p>
+        <h1>O que levar</h1>
+        <p>Feito para mochileiros que querem viajar de forma mais leve e inteligente</p>
 
-        <hr>
 
-        <form method="POST" class="post-form">
+
+        <hr><!-- _________________________________________________ -->
+
+
+
+        <form method="post">
             {% csrf_token %}
-            {{ form.as_table }}
-            <button type="submit" class="btn btn-primary btn-lg btn-block">Fazer a minha mala</button>
+
+            {% for field in form %}
+            <div class="fieldWrapper">
+                {{ field.errors }}
+                {{ field.label_tag }}
+                <ul id="{{ field.auto_id }}">
+                    {% for radio in field %}
+                    <li>
+                    {{ radio.tag }}
+                    <label for="{{ radio.id_for_label }}">
+                        {{ radio.choice_label }}
+                    </label>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endfor %}
+
+            <button type="submit">Fazer a minha mala</button>
         </form>
 
     </div>
