--- a/app/templates/product_detail.html
+++ b/app/templates/product_detail.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
+{% load staticfiles %}
+
 {% block title %}
-<title>O que levar – Sua mochila - Produto</title>
+  <title>O que levar – Sua mochila</title>
 {% endblock %}
 
 {% block content %}
@@ -9,29 +11,59 @@
 
 
 <div class="row">
-    <div class="col-12">
-        <a href="{% url 'backpack-detail' context.backpack.pk %}">
-            ← Voltar
-        </a>
+    <div class="col-8">
+        <h1>O que levar</h1>
+    </div>
+    <div class="col-4 backpack-summary">
+                {% if context.backpack.temp < 10 %}
+                <img src="{% static 'app/images/icons8-snow-storm-100.png' %}" alt="Muito frio">
+                {% elif context.backpack.temp < 20 %}
+                <img src="{% static 'app/images/icons8-haze-100.png' %}" alt="Frio">
+                {% elif context.backpack.temp < 30 %}
+                <img src="{% static 'app/images/icons8-sun-100.png' %}" alt="Quente">
+                {% else %}
+                <img src="{% static 'app/images/icons8-summer-100.png' %}" alt="Muito quente">
+                {% endif %}
+
+                {% if context.backpack.days < 7 %}
+                <img src="{% static 'app/images/icons8-calendar-3-100.png' %}" alt="3">
+                {% elif context.backpack.days < 11 %}
+                <img src="{% static 'app/images/icons8-calendar-7-100.png' %}" alt="7">
+                {% elif context.backpack.days < 14 %}
+                <img src="{% static 'app/images/icons8-calendar-11-100.png' %}" alt="11">
+                {% else %}
+                <img src="{% static 'app/images/icons8-calendar-14-100.png' %}" alt="+14">
+                {% endif %}
+
+                {% if context.backpack.sex == m %}
+                <img src="{% static 'app/images/icons8-user-male-100.png' %}" alt="Homem">
+                {% else %}
+                <img src="{% static 'app/images/icons8-female-user-100.png' %}" alt="Mulher">
+                {% endif %}
+
     </div>
 </div>
 
 
 
+<hr><!-- _________________________________________________ -->
+
+
+
 <div class="row">
     <div class="col-12">
-        <p>{{ context.product.category }}</p>
-        <h1>{{ context.product.name }}</h1>
+        <p><a href="{% url 'backpack-detail' context.backpack.pk %}">← Voltar</a></p>
     </div>
 </div>
 
 
-
 <div class="row">
-    <div class="col-4">
+    <div class="col-3">
         <img src="{{context.product.image.url}}">
     </div>
-    <div class="col-8">
+    <div class="col-6">
+        <p class="mb-0">{{ context.product.category }}</p>
+        <h2 class="mt-0">{{ context.product.name }}</h2>
         <p>{{ context.product.description }}</p>
     </div>
 </div>
