--- a/app/templates/backpack_new.html
+++ b/app/templates/backpack_new.html
@@ -21,13 +21,13 @@
             {% for field in form %}
             <div class="fieldWrapper">
                 {{ field.errors }}
-                {{ field.label_tag }}
-                <ul id="{{ field.auto_id }}">
+                <h2>{{ field.label }}</h2>
+                <ul>
                     {% for radio in field %}
                     <li>
                     {{ radio.tag }}
                     <label for="{{ radio.id_for_label }}">
-                        {{ radio.choice_label }}
+                        <span>{{ radio.choice_label }}</span>
                     </label>
                     </li>
                     {% endfor %}
@@ -35,7 +35,7 @@
             </div>
             {% endfor %}
 
-            <button type="submit">Fazer a minha mala</button>
+            <button type="submit" class="btn btn-primary btn-lg btn-block my-5">Fazer a minha mala</button>
         </form>
 
     </div>
