--- a/app/templates/product_detail.html
+++ b/app/templates/product_detail.html
@@ -52,7 +52,7 @@
 
 <div class="row">
     <div class="col-12">
-        <p><a href="{% url 'backpack-detail' context.backpack.pk %}">← Voltar</a></p>
+        <p><a href="{% url 'backpack-detail' context.backpack.uuid %}">← Voltar</a></p>
     </div>
 </div>
 
