--- a/app/static/app/css/styles.css
+++ b/app/static/app/css/styles.css
@@ -79,16 +79,18 @@ form ul {
 
 form ul > li {
   display: inline-block;
+  width: 24%;
 }
 
 form ul > li > label {
-  width: 100px;
-  height: 100px;
+  display: block;
+  height: 120px;
   cursor: pointer;
   border: solid 2px #ffffff;
   border-radius: 4px;
   opacity: 1;
   margin-right: 10px;
+  margin-bottom: 40px;
   background-color: white;
   background-size: 60%;
   background-repeat: no-repeat;
@@ -105,7 +107,7 @@ form ul > li > input:checked + label {
 form ul > li > label > span {
   display: block;
   position: relative;
-  top: 105px;
+  bottom: -125px;
   font-size: 0.8em;
 }
 
