--- a/app/templates/backpack_new.html
+++ b/app/templates/backpack_new.html
@@ -4,7 +4,7 @@
 
 
 <div class="row justify-content-center">
-    <div class="col-6">
+    <div class="col-lg-6 col-md-8 col-sm-12">
 
         <h1>O que levar</h1>
         <p>Feito para mochileiros que querem viajar de forma mais leve e inteligente</p>
