--- a/app/templates/backpack_detail.html
+++ b/app/templates/backpack_detail.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-
+{% load bootstrap4 %}
 
 
 <div class="row">
@@ -15,32 +15,8 @@
         <h1>O que levar</h1>
     </div>
     <div class="col-6 backpack-summary">
-                {% if context.backpack.temp < 10 %}
-                <img src="{% static 'app/images/icons8-snow-storm-100.png' %}" alt="Muito frio">
-                {% elif context.backpack.temp < 20 %}
-                <img src="{% static 'app/images/icons8-haze-100.png' %}" alt="Frio">
-                {% elif context.backpack.temp < 30 %}
-                <img src="{% static 'app/images/icons8-sun-100.png' %}" alt="Quente">
-                {% else %}
-                <img src="{% static 'app/images/icons8-summer-100.png' %}" alt="Muito quente">
-                {% endif %}
-
-                {% if context.backpack.days < 7 %}
-                <img src="{% static 'app/images/icons8-calendar-3-100.png' %}" alt="3">
-                {% elif context.backpack.days < 11 %}
-                <img src="{% static 'app/images/icons8-calendar-7-100.png' %}" alt="7">
-                {% elif context.backpack.days < 14 %}
-                <img src="{% static 'app/images/icons8-calendar-11-100.png' %}" alt="11">
-                {% else %}
-                <img src="{% static 'app/images/icons8-calendar-14-100.png' %}" alt="+14">
-                {% endif %}
-
-                {% if context.backpack.sex == m %}
-                <img src="{% static 'app/images/icons8-user-male-100.png' %}" alt="Homem">
-                {% else %}
-                <img src="{% static 'app/images/icons8-female-user-100.png' %}" alt="Mulher">
-                {% endif %}
-
+                <p>{{context.backpack.place}}</p>
+                <p>{{context.backpack.temp}}º  •  {{context.backpack.days}}  •  {{context.backpack.sex}}º</p>
     </div>
 </div>
 
