--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
   <!-- Main CSS -->
   <link rel="stylesheet" type="text/css" href='{% static "app/css/styles.css" %}'>
 
