Update paramns display to show start_date

--- a/app/templates/backpack_detail.html
+++ b/app/templates/backpack_detail.html
@@ -16,6 +16,7 @@
     </div>
     <div class="col-6 backpack-summary">
                 <p>{{context.backpack.place}}</p>
+                <p>{{context.backpack.start_date}}</p>
                 <p>{{context.backpack.temp}}°C  •  {{context.backpack.days}} days  •  {{context.backpack.sex}} sex</p>
     </div>
 </div>
